add spruce needed in shipit task

--- a/ci/docker-image/Dockerfile
+++ b/ci/docker-image/Dockerfile
@@ -17,7 +17,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -y -qq update && apt-get -y -qq insta
 RUN wget -q -O - https://raw.githubusercontent.com/starkandwayne/homebrew-cf/master/public.key | apt-key add - && \
     echo "deb http://apt.starkandwayne.com stable main" | tee /etc/apt/sources.list.d/starkandwayne.list && \
     apt-get -y -qq update && \
-    apt-get -y -qq install bosh-cli hub
+    apt-get -y -qq install bosh-cli hub spruce
 
 # add yq for updating opsman image
 RUN LC_ALL=C.UTF-8 add-apt-repository -y ppa:rmescandon/yq && \
