--- a/ci/tasks/shipit.yml
+++ b/ci/tasks/shipit.yml
@@ -4,8 +4,7 @@ image_resource:
   type: docker-image
   source: {repository: jrjohnsongoog/omgci}
 inputs:
-- name: omg-src-in
-  path: omg-src-develop
+- name: omg-src-develop
 - name: omg-src-master
 - name: omg-src-ci
 - name: version
